# IC

lab01/sndfile-example-src/: BitStream.h  CMakeLists.txt  codec.cpp  decoder.cpp  encoder.cpp  wav_cmp.cpp  wav_cp.cpp  wav_effects.cpp  wav_hist.cpp  wav_hist.h  wav_quant.cpp  wav_quant.h
lab02/guiao2-src/: CMakeLists.txt  golomb.h  golombImgDecoder.cpp  golombImgEncoder.cpp  golombTest.cpp  ppm_copy.cpp  ppm_effects.cpp
lab03/src/: CMakeLists.txt  Readme.txt  videoDecoderIntra.cpp  videoDecoderMC.cpp  videoEncoderIntra.cpp  videoEncoderMC.cpp  videoEncoderQuantized.cpp  video_cmp.cpp
lab03/src/utils/: BitStream.h
